# dxram

./: .checkstyle  .classpath  .gitignore  .gitmodules  .project  .travis.yml  LICENSE_SHORT  MANIFEST.MF  README.md  README.txt  STYLEGUIDE.txt  artifactory.gradle  bintray.gradle  build.gradle  build.sh  build.xml  cmd_startMonitor  cmd_startPeer  cmd_startPeer2  cmd_startPeer3  cmd_startPeer4  cmd_startSuperpeer  disable_logger.sh  dump.mem  dxhelloworld-build.xml  dxram-apps-build.xml  dxram-build-config.xml  dxram-build.xml  dxram-core-build.xml  dxram-studentpack.xml  dxram.jardesc  dxterm-client  eclipse_format.xml  enable_logger.sh  env.sh  gradle.properties  mbx_startClient  mbx_startServer  mbx_startSuperpeer  out  (+12 more)
ant/: dxhelloworld-build.xml  dxram-apps-build.xml  dxram-build.xml  dxram-core-build.xml  dxterm-build.xml
compute/: bfs.ctask  bfs_exec.ctask  chunktest.cts  test.ctask  test.cts  test2.cts  testList.ctask
config/: dxcompute.master.nothaas.conf  dxcompute.master2.nothaas.conf  dxcompute.slave.nothaas.conf  dxcompute.slave2.nothaas.conf  dxram.conf  dxram.config  dxram.default.conf  dxram.jni.beineke.cluster.conf  dxram.jni.beineke.conf  dxram.jni.beineke.mac.conf  dxram.jni.birkhoff.mac.conf  dxram.jni.nothaas.cluster.conf  dxram.jni.nothaas.conf  dxram.jni.nothaas.mac.conf  dxram.nodes.beineke.conf  dxram.nodes.local.conf  dxram.nodes.nothaas.cluster.conf  dxram.nodes.student.conf  dxram.nothaas.conf  dxram.student.conf  dxram_default.config  log4j.properties  log4j.xml  nodes.config  nodes.dxram
doc/: Applications.md  Architecture.md  Benchmark.md  CreateRelease.md  Development setup.md  Development.md  DevelopmentSetup.md  ManualSetup.md  Publications.md  QuickStart.md  Services.md  StyleGuideBash.md  StyleGuideJava.md  Terminal.md  Troubleshooting.md
doc/Introduction/: Introduction.tex
doc/Log+Recovery/: Log+Recovery.tex
doc/img/source/: Get.dia  ID.dia  MemoryHandlingClasses.dia  SuperPeer_Data.dia  aufbau.odg  data_identifier.dia  loglayout.dia  recovery_divide.odg  recovery_init.odg  recovery_recover.odg
dxram/: build.gradle  publish.gradle  types.gradle
eclipse/: DXRAMMainPeer(22222).launch  DXRAMSuperpeer(22221).launch  STYLEGUIDE.txt  dxram.importorder  format.xml  styleguide.xml
graph/: out.oel  vneighbourlist.oel__.0
graph/master/: out.oel.0
graph/slave/: out.oel.1  vneighbourlist.oel.1
ibdxnet/: .gitignore  CMakeLists.txt  README.md
ibdxnet/cmake/: CMakeLists.txt
ibdxnet/cmake/IbConnectionManagerTest/: CMakeLists.txt
ibdxnet/cmake/IbDeviceTest/: CMakeLists.txt
ibdxnet/cmake/IbnetCore/: CMakeLists.txt
ibdxnet/cmake/IbnetSys/: CMakeLists.txt
ibdxnet/cmake/JNIIbdxnet/: CMakeLists.txt
ibdxnet/cmake/NetworkTest/: CMakeLists.txt
ibdxnet/cmake/SocketUdpTest/: CMakeLists.txt
ibdxnet/doc/: Development.md  Setup.md
ibdxnet/libs/argagg/: argagg.hpp
ibdxnet/libs/backwards/: backward.hpp
ibdxnet/scripts/: hilbert_build.job  hilbert_compile_notes
ibdxnet/test/: memreg_test.c
ibdxnet/test/ma/: .gitignore  Makefile  helper.c  helper.h  ib_client.c  ib_server.c  tcp.c  tcp.h  verbs.c  verbs.h
intellij/: checkstyle.xml  copyright  format.xml  formatter.xml  inspections.xml  styleguide.xml
jni/: JNILock.c  JNILock.h  JNINativeMemory.c  JNIconsole.c  JNIconsole.dylib  JNIconsole.h  README.txt  libJNILock.dylib  libJNINativeMemory.dylib  libJNIconsole.dylib
jni/console/: JNIconsole.c
jni/harddriveaccess/: JNIFileDirect.c  JNIFileDirect.h  JNIFileRaw.c  JNIFileRaw.h  JNIFileRawStructures.h
jni/libhistory/: __.SYMDEF SORTED
jni/nativecrcgen/: JNINativeCRCGenerator.c
jni/nativememory/: JNINativeMemory.c  JNINativeMemoryCompileBenchmark.sh
jni/nativethreadaffinity/: JNINativeThreadAffinity.c
native/: build.gradle
script/: README.md
script/compute/: AbortExample.cts  ChunkCreateLocalRemoteRandom.cts  ChunkCreateLocalTest.cts  ChunkCreateRemoteRandomTest.cts  ChunkCreateRemoteTest.cts  ChunkCreateTest.cts  ChunkDataModifyLocalTest.cts  ChunkGetTest.cts  ChunkLocalBench.cts  ChunkLocalMinimalDebug.cts  ChunkLocalShortIntegrityTest.cts  ChunkLocalTest.cts  ChunkRemoteRemoveAllTest.cts  ChunkRemoveAllTest.cts  ConditionExample.cts  DXGraphBFSSmallTest.cts  NameserviceGetChunkIdTest.cts  NetworkBroadcastTest.cts  NetworkEndToEndTest.cts  README.md  SimpleTaskScriptExample.cts  SwitchExample.cts
script/compute/bench/: ChunkServiceLocalBench.cts  ChunkServiceLocalBenchSmall.cts  ChunkServiceRemoteBench.cts  ChunkServiceRemoteBenchSmall.cts  README.md
script/compute/example/: AbortExample.cts  ConditionExample.cts  RebootNodeExample.cts  SimpleTaskScriptExample.cts  SwitchExample.cts
script/compute/test/: ChunkCreateLocalRemoteRandom.cts  ChunkCreateLocalTest.cts  ChunkCreateRemoteRandomTest.cts  ChunkCreateRemoteTest.cts  ChunkDataModifyLocalTest.cts  ChunkLocalTest.cts  (+13 more)
script/deploy/: .gitignore  README.md  deploy.sh  deploy_mac.sh  kill_all.sh
script/dxram/: OverlayTest.js  Test.js
script/hilbert/: README.md  deploy_hilbert.sh  dxram_template.job
script/sh/: DummyTest.conf  LogTest.conf  MailboxTest.conf  OverlayTest.conf  OverlayTest.js  SimpleComputeGroupTest.conf  SimpleTest.conf  YCSBTest.conf  deploy.sh  kill_all.sh
script/term/: barrieralloc.js  barrierfree.js  barriersignon.js  barriersize.js  barrierstatus.js  chunkcreate.js  chunkdump.js  chunkget.js  chunklist.js  chunklock.js  chunklocklist.js  chunkmigrate.js  chunkput.js  chunkremove.js  chunkstatus.js  chunkunlock.js  compgrpls.js  compgrpstatus.js  comptask.js  comptasklistsub.js  comptasks.js  comptaskscript.js  comptasksub.js  loggerlevel.js  loginfo.js  lookuptree.js  metadatasummary.js  nameget.js  namelist.js  namereg.js  nodeinfo.js  nodelist.js  nodereboot.js  nodeshutdown.js  nodewait.js  recover.js  scriptrun.js  statsprint.js  statsrecorders.js  termscriptrun.js  (+5 more)
scripts/: disable_logger_trace.sh  enable_logger.sh  postprocessor.sh  preprocessor.sh  start_dxram_terminal.sh  start_zookeeper.sh
src/: CONTENT.txt
util/: flush_pagecache.sh  plot_statistics.sh  postprocessor.sh  preprocessor.sh  start_dxram_terminal.sh
(+3853 files in other folders)
